FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20130904:
AUTHOR: madpilot@FreeBSD.org

  To allow ports to work with the iconv implementation in 10-CURRENT after
  commit r254273 the USES=iconv options now conditionally adds a dependency
  depending on the FreeBSD version. It also defines a few utility variables
  which can be used in the ports:

  ICONV_CMD:	location of the iconv binary.
		after r254273: /usr/bin/iconv
		before: ${LOCALBASE}/bin/iconv

  ICONV_LIB:	ld(1) flags to get the iconv DSO.
		after r254273: empty
		before: -liconv

  ICONV_CONFIGURE_ARG:  String that can be passed to configure
  			scripts to hint the location of the libiconv library.
			after r254273: empty
			before: --with-libiconv-prefix=${LOCALBASE}

20130902:
AUTHOR: bapt@FreeBSD.org

  USE_GNOME=pkgconfig is not supported anymore by the ports tree, please
  uses: USES=pkgconfig

20130831:
AUTHOR: bdrewery@FreeBSD.org

  crees has added USE_PACKAGE_DEPENDS_ONLY which works like
  USE_PACKAGE_DEPENDS but will not fallback on source if a
  package is missing.

20130731:
AUTHOR: bapt@FreeBSD.org

  * New USES: perl5

  This uses replaces all the previous perl macros. Here is how to migrate:

  Always include perl5:
  USES= perl5

  If USE_PERL5 is undefined then perl5 will be a build and run dependency
  Migrating to new USE_PERL5:

  =======================================================
  | BEFORE                 | AFTER                      |
  =======================================================
  | PERL_CONFIGURE=yes     | USE_PERL5= configure       |
  -------------------------------------------------------
  | USE_PERL5_RUN=yes      | USE_PERL5=run              |